--- a/css/resume.css
+++ b/css/resume.css
@@ -10,7 +10,7 @@ body {
 @media (min-width: 992px) {
   body {
     padding-top: 0;
-    padding-left: 20rem;
+    padding-left: 25rem;
   }
 }
 
@@ -115,12 +115,12 @@ p.lead {
     left: 0;
     display: flex;
     flex-direction: column;
-    width: 20rem;
+    width: 25rem;
     height: 100vh;
   }
   #sideNav .navbar-brand {
     display: flex;
-    margin-top: auto;
+    margin-top: 100px;
     padding: 0.0rem;
   }
   #sideNav .navbar-brand .img-profile {
