--- a/css/resume.css
+++ b/css/resume.css
@@ -10,7 +10,7 @@ body {
 @media (min-width: 992px) {
   body {
     padding-top: 0;
-    padding-left: 25rem;
+    padding-left: 20rem;
   }
 }
 
@@ -55,9 +55,9 @@ p.lead {
   display: inline-block;
   color: #ffffff; 
   text-align: center;
-  font-size: 2.5rem;
+  font-size: 2rem;
   line-height: 3.5rem;
-  margin-right: 1rem;
+  margin-right: 0.5rem;
   margin-top: 2rem;
 }
 
@@ -115,18 +115,18 @@ p.lead {
     left: 0;
     display: flex;
     flex-direction: column;
-    width: 25rem;
+    width: 20rem;
     height: 100vh;
   }
   #sideNav .navbar-brand {
     display: flex;
-    margin-top: 100px;
+    margin-top: auto;
     padding: 0.0rem;
   }
   #sideNav .navbar-brand .img-profile {
-    max-width: 14rem;
-    max-height: 14rem;
-    border: 0.5rem solid rgba(255, 255, 255, 0.2);
+    max-width: 12rem;
+    max-height: 12rem;
+    border: 0.1rem solid rgba(255, 255, 255, 0.2);
     border-radius: 25px;
     
   }
