--- a/css/resume.css
+++ b/css/resume.css
@@ -32,7 +32,6 @@ body {
   .profile-header {
     display: none;
   }
-}
 
 h1,
 h2,
@@ -68,9 +67,10 @@ p.lead {
 }
 
 .subheading {
-  font-weight: 500;
+  font-weight: 300;
   font-family: 'Saira Extra Condensed', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
   font-size: 1.5rem;
+  margin-top: 5px;
 }
 
 .social-icons a {
