--- a/css/resume.css
+++ b/css/resume.css
@@ -32,6 +32,7 @@ body {
   .profile-header {
     display: none;
   }
+}
 
 h1,
 h2,
@@ -67,10 +68,9 @@ p.lead {
 }
 
 .subheading {
-  font-weight: 100;
+  font-weight: 500;
   font-family: 'Saira Extra Condensed', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
-  font-size: 1.3rem;
-  margin-top: 5px;
+  font-size: 1.5rem;
 }
 
 .social-icons a {
