--- a/css/resume.css
+++ b/css/resume.css
@@ -3,8 +3,8 @@ body {
   font-family: 'Muli', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
   padding-top: 75px;
   color: #3b3d3f;
-  background: url('/img/fundo.jpg') no-repeat center center fixed;
   background-size: cover;
+  background-color: #fcfcfc!important;
 }
 
 .profile-header {
@@ -26,7 +26,7 @@ body {
 @media (min-width: 992px) {
   body {
     padding-top: 0;
-    padding-left: 16rem;
+    padding-left: 50vh;
   }
 
   .profile-header {
@@ -77,7 +77,7 @@ p.lead {
   display: inline-block;
   color: #ffffff; 
   text-align: center;
-  font-size: 2rem;
+  font-size: 2.5rem;
   line-height: 3.5rem;
   margin-right: 0.5rem;
   margin-top: 2rem;
@@ -88,7 +88,7 @@ p.lead {
 }
 
 .social-icons a:hover {
-  color: #bbb8b8;
+  color: #000000;
 }
 
 .dev-icons {
@@ -118,7 +118,8 @@ p.lead {
 
 #sideNav .navbar-nav .nav-item .nav-link {
   font-weight: 800;
-  letter-spacing: 0.05rem;
+  font-size: 1.7rem;
+  letter-spacing: 0.15rem;
   text-transform: uppercase;
 }
 
@@ -145,7 +146,7 @@ p.lead {
     left: 0;
     display: flex;
     flex-direction: column;
-    width: 16rem;
+    width: 50vh;
     height: 100vh;
   }
   #sideNav .navbar-brand {
@@ -156,7 +157,6 @@ p.lead {
   #sideNav .navbar-brand .img-profile {
     max-width: 11rem;
     max-height: 11rem;
-    border: 0.2rem solid rgba(255, 255, 255, 0.2);
     border-radius: 25px;
     
   }
@@ -207,9 +207,10 @@ section.resume-section .resume-item .resume-date {
 
 .bg-primary {
   background-color: #020202!important;
+  background: url('/img/fundo.jpg') no-repeat fixed;
 }
 .bg-alter {
-  background-color: rgb(159, 160, 159);
+  background-color: rgb(0, 0, 0);
 }
 
 .post-color{
